# VMS

./: .gitignore  CLEANUP_SUMMARY.md  DIRECTORY_STRUCTURE.md  HOW_TO_ADD_EDIT_YOLO_MODELS.md  INSTALL_RASPBERRY_PI.md  LICENSE  Makefile  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART_WINDOWS.md  README.md  RUN.md  SETUP_RASPBERRY_PI.md  STORAGE_DATABASE.md  TROUBLESHOOTING.md  UI_CLEANUP_SUMMARY.md  ULTRA_PERFORMANCE_MODE.md  YOLO_CODE_STRUCTURE.md  docker-compose.yml  requirements-backend.txt  requirements-detection.txt  requirements.txt
backend/: pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/db/: models.py  repo.py
backend/app/routers/: events.py  models.py  query.py  sos.py  system.py  upload.py  zones.py
backend/app/services/: detection_client.py  storage.py
backend/app/ws/: alerts.py  live.py
deploy/systemd/: intrusion-backend.service  intrusion-detection.service  intrusion-frontend.service
detection-service/: pyproject.toml
detection-service/detectsvc/: __init__.py  config.py  main.py  registry.py
detection-service/detectsvc/accel/: __init__.py  base.py  onnx_cpu.py
detection-service/detectsvc/pipeline/: capture.py  infer_onnx.py  tracker.py  zones.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
models/: README.md
scripts/: enable_models.py  init_storage_db.py  run_all_dev.sh  run_all_prod.sh  setup_pi.sh  setup_windows.bat  setup_windows.ps1  start_windows.ps1  test_inference_speed.py  toggle_performance_mode.py
shared/api/: http_openapi.yaml  ws_topics.md
(+45 files in other folders)
